Gateway service: updated swagger + some refactor;